bug fix: fixed error on website shifting to the right

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
 .App {
-    margin-left:    10%;
-    margin-right:   10%;
+    width: 100%;
+    height: 100%
 }
